--- a/clusters/k8cluster/flux-system/kustomization.yaml
+++ b/clusters/k8cluster/flux-system/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  namespace: default
 resources:
   - gotk-components.yaml
   - gotk-sync.yaml
